Small layout updates to Carousel thumbnails for better visibility (more improvments still needed); fixed hover styling logic for Product options and Carousel thumbnails

--- a/app/(main)/product/[product]/product.css
+++ b/app/(main)/product/[product]/product.css
@@ -13,7 +13,7 @@
   gap: 2rem;
   padding: 2rem;
   width: 75%;
-  height: 45rem;
+  height: 50rem;
   animation: fade-in-up 400ms 200ms backwards;
 }
 
